# OBS-SpeechToTelop

./: CLAUDE.md  CMakeLists.txt
.github/workflows/: build.yml  release.yml
cmake/Modules/: Findw32-pthreads.cmake
cmake/w32-pthreads/: w32-pthreadsConfig.cmake
data/locale/: en-US.ini  ja-JP.ini
docs/: smoke-test.md
docs/superpowers/specs/: 2026-05-13-speech-to-telop-design.md
scripts/: build-release-mac.sh
src/: audio-filter.cpp  audio-filter.h  audio-resampler.cpp  audio-resampler.h  model-downloader.cpp  model-downloader.h  pipeline-registry.cpp  pipeline-registry.h  pipeline.cpp  pipeline.h  plugin-main.cpp  ring-buffer.h  stt-backend.h  stt-cloud.cpp  stt-cloud.h  stt-engine.cpp  stt-engine.h  stt-whisper.cpp  stt-whisper.h  telop-animation.cpp  telop-animation.h  telop-renderer.cpp  telop-renderer.h  telop-source.cpp  telop-source.h  text-buffer.cpp  text-buffer.h
tests/: test-animation.cpp  test-pipeline-registry.cpp  test-ring-buffer.cpp  test-text-buffer.cpp
